sqsh-rs/tests/snapshots/example__recursive_directory.snap
---
source: sqsh-rs/tests/example.rs
expression: trees
---
[
    File(
        "1MiB.file",
    ),
    File(
        "broken.link",
    ),
    Directory(
        "deep",
        [
            Directory(
                "level1",
                [
                    Directory(
                        "level2",
                        [
                            Directory(
                                "level3",
                                [
                                    Directory(
                                        "level4",
                                        [
                                            Directory(
                                                "level5",
                                                [
                                                    File(
                                                        "file",
                                                    ),
                                                ],
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        ],
                    ),
                ],
            ),
        ],
    ),
    Directory(
        "dev",
        [
            File(
                "block",
            ),
            File(
                "char",
            ),
        ],
    ),
    File(
        "empty.file",
    ),
    Directory(
        "empty_dir",
        [],
    ),
    File(
        "fifo",
    ),
    File(
        "one.file",
    ),
    File(
        "short.file",
    ),
    File(
        "short.link",
    ),
    File(
        "socket",
    ),
    File(
        "socket2",
    ),
    Directory(
        "subdir",
        [
            File(
                "one.file",
            ),
            File(
                "short.file",
            ),
        ],
    ),
]
