sqsh-rs/tests/snapshots/example__subdir debug.snap
---
source: sqsh-rs/tests/example.rs
expression: dir
---
File {
    file_type: Some(
        Directory,
    ),
    permissions: Permissions(
        UserRead | UserWrite | UserExec | GroupRead | GroupExec | OtherRead | OtherExec,
    ),
    inode_ref: InodeRef(
        0x0000_00000000_01D5,
    ),
    is_extended: false,
    hard_link_count: 2,
    size: 49,
    inode: Inode(
        13,
    ),
    parent_inode: Inode(
        16,
    ),
    modified_time: 1000,
    symlink_path: None,
    device_id: 0,
    uid: 0,
    gid: 0,
    xattr_id: 4294967295,
}
