sqsh-rs/tests/snapshots/example__superblock.snap
---
source: sqsh-rs/tests/example.rs
expression: superblock
---
Superblock {
    compression_type: Compression(
        "gzip",
    ),
    inode_count: 27,
    id_count: 6,
    fragment_entry_count: 1,
    inode_table_start: 1329,
    directory_table_start: 1631,
    fragment_table_start: Some(
        1969,
    ),
    export_table_start: Some(
        2064,
    ),
    id_table_start: 2098,
    xattr_id_table_start: Some(
        2188,
    ),
    root_inode_ref: InodeRef(
        0x0000_00000000_0355,
    ),
    has_fragments: true,
    has_export_table: true,
    has_xattr_table: true,
    has_compression_options: true,
    version_major: 4,
    version_minor: 0,
    block_size: 131072,
    modification_time: 2000,
    bytes_used: 2212,
}
