sqsh-rs/tests/snapshots/example__walk_whole_dir.snap
---
source: sqsh-rs/tests/example.rs
expression: names
---
[
    "1MiB.file",
    "broken.link",
    "deep",
    "dev",
    "empty.file",
    "empty_dir",
    "fifo",
    "one.file",
    "short.file",
    "short.link",
    "socket",
    "socket2",
    "subdir",
    "weird",
]
